<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment"
    android:orientation="vertical"
    app:backgroundTint="@null"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/settings"
            android:layout_marginRight="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style='@style/settingsTextStyle'
            android:textSize="19sp"
            android:text="@string/settings" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/archive"
            android:layout_marginRight="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style='@style/settingsTextStyle'
            android:textSize="19sp"
            android:text="@string/archive" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/your_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/activity"
            android:layout_marginRight="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style='@style/settingsTextStyle'
            android:textSize="19sp"
            android:text="@string/your_activity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qr_code"
            android:layout_marginRight="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style='@style/settingsTextStyle'
            android:textSize="19sp"
            android:text="@string/qr_code" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/saved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/saved"
            android:layout_marginRight="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style='@style/settingsTextStyle'
            android:textSize="19sp"
            android:text="@string/saved" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/close_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_friends"
            android:layout_marginRight="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style='@style/settingsTextStyle'
            android:textSize="19sp"
            android:text="@string/close_friends" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/discover_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/discover_people"
            android:layout_marginRight="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style='@style/settingsTextStyle'
            android:textSize="19sp"
            android:text="@string/discover_people" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/covid_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:layout_marginRight="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style='@style/settingsTextStyle'
            android:textSize="19sp"
            android:text="@string/covid_info" />
    </LinearLayout>

</LinearLayout>